--- a/client_secret_940956283013-ngpfi9i4hsil1lti3atj5keiodkch6m9.apps.googleusercontent.com.json
+++ b/client_secret_940956283013-ngpfi9i4hsil1lti3atj5keiodkch6m9.apps.googleusercontent.com.json
@@ -5,6 +5,6 @@
     "token_uri":"https://oauth2.googleapis.com/token",
     "auth_provider_x509_cert_url":"https://www.googleapis.com/oauth2/v1/certs",
     "client_secret":"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",
-    "redirect_uris":["http://localhost:4000/google/login"]
+    "redirect_uris":["webcomic.cmscity.co/google/login"]
     }
 }
