--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ mongodblink = mongodb+srv://kai:kai123@cluster0.7rn9g.mongodb.net/final_project1
 
 GOOGLE_CLIENT_ID = 940956283013-ngpfi9i4hsil1lti3atj5keiodkch6m9.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
-GOOFLE_CALLBACK_URL = http://localhost:4000/google/login
+GOOFLE_CALLBACK_URL = webcomic.cmscity.co/google/login
