'update-google-auth'

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 mongodblink = mongodb+srv://kai:kai123@cluster0.7rn9g.mongodb.net/final_project1?retryWrites=true&w=majority
 
-GOOGLE_CLIENT_ID = 940956283013-ngpfi9i4hsil1lti3atj5keiodkch6m9.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET = 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
-GOOFLE_CALLBACK_URL = webcomic.cmscity.co/google/login
+GOOGLE_CLIENT_ID = 940956283013-9lu848shct3sovqe4ovlihtu1io0p3sl.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+GOOFLE_CALLBACK_URL = https://webcomic.cmscity.co/google/login
